force-app/main/default/objects/Enphase_Logger__c/Enphase_Logger__c.object-meta.xml
<CustomObject>
    <label>Enphase Logger</label>
    <nameField>
        <label>Enphase Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enphase Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>