force-app/main/default/objects/Enphase_Logger__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
            <value>
                <fullName>SGIP</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Sunnova</fullName>
            </value>
            <value>
                <fullName>Solar Optimum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>