force-app/main/default/objects/Enphase_Logger__c/fields/Log_Eligible_for_Share__c.field-meta.xml
<CustomField>
    <fullName>Log_Eligible_for_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Eligible for Share</label>
    <type>Checkbox</type>
</CustomField>