force-app/main/default/objects/Enphase_Logger__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>UniqueIdentifier</label>
    <length>64</length>
    <type>Text</type>
</CustomField>