force-app/main/default/objects/Enphase_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Type__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>UniqueIdentifier__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Body__c</columns>
    <columns>Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Operation_Type__c</field>
        <operation>contains</operation>
        <value>sign</value>
    </filters>
    <label>All</label>
</ListView>