force-app/main/default/objects/Enphase_Logger__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>UniqueIdentifier__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Operation_Type__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>