force-app/main/default/objects/Enphase_Logger__c/listViews/Sgip_Messages.listView-meta.xml
<ListView>
    <fullName>Sgip_Messages</fullName>
    <columns>NAME</columns>
    <columns>UniqueIdentifier__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Request__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UniqueIdentifier__c</field>
        <operation>equals</operation>
        <value>ENPHSGIP708</value>
    </filters>
    <label>Sgip Messages</label>
</ListView>