force-app/main/default/objects/Enphase_Logger__c/listViews/Single_Lead_List_View.listView-meta.xml
<ListView>
    <fullName>Single_Lead_List_View</fullName>
    <columns>NAME</columns>
    <columns>API_Type__c</columns>
    <columns>UniqueIdentifier__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Request__c</columns>
    <columns>Body__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UniqueIdentifier__c</field>
        <operation>equals</operation>
        <value>4HN66PMNB</value>
    </filters>
    <label>Single Lead List View</label>
</ListView>