force-app/main/default/objects/Enphase_Logger__c/listViews/Solar_Optimum_Logs.listView-meta.xml
<ListView>
    <fullName>Solar_Optimum_Logs</fullName>
    <columns>NAME</columns>
    <columns>UniqueIdentifier__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Request__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Type__c</field>
        <operation>contains</operation>
        <value>Solar Optimum</value>
    </filters>
    <label>Solar Optimum Logs</label>
</ListView>