force-app/main/default/objects/Enphase_Logger__c/listViews/Sunnova_Logs.listView-meta.xml
<ListView>
    <fullName>Sunnova_Logs</fullName>
    <columns>NAME</columns>
    <columns>UniqueIdentifier__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Request__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Type__c</field>
        <operation>contains</operation>
        <value>Sunnova</value>
    </filters>
    <label>Sunnova Logs</label>
</ListView>